buildscript {
    repositories {
        maven { url = "https://maven.aliyun.com/repository/public" }
        maven { url = "https://maven.aliyun.com/repository/gradle-plugin" }
        mavenCentral()
        maven { url = "https://maven.minecraftforge.net/" }
        maven { url = "https://maven.parchmentmc.org" }
    }
}

plugins {
    id "eclipse"
    id "idea"
    id "maven-publish"
    id "net.minecraftforge.gradle" version "[6.0,6.2)"
    id "org.parchmentmc.librarian.forgegradle" version "1.+"
}

version = "1.0.0"
group = "com.mcmod.monsterwaves"

base {
    archivesName = "monsterwaves"
}

java.toolchain.languageVersion = JavaLanguageVersion.of(17)

println "Java: ${System.getProperty("java.version")}  JVM: ${System.getProperty("java.vm.version")}(${System.getProperty("java.vendor")})  Arch: ${System.getProperty("os.arch")}"

minecraft {
    mappings channel: "parchment", version: "2023.09.03-1.20.1"
    copyIdeResources = true
    runs {
        configureEach {
            workingDirectory project.file("run")
            property "forge.logging.markers", "REGISTRIES"
            property "forge.logging.console.level", "debug"
            mods {
                "${mod_id}" {
                    source sourceSets.main
                }
            }
        }
        client {
            property "forge.enabledGameTestNamespaces", mod_id
        }
        server {
            property "forge.enabledGameTestNamespaces", mod_id
            args "--nogui"
        }
        gameTestServer {
            property "forge.enabledGameTestNamespaces", mod_id
        }
        data {
            workingDirectory project.file("run")
            args "--mod", mod_id, "--all", "--output", file("src/generated/resources/"), "--existing", file("src/main/resources/")
        }
    }
}

sourceSets.main.resources { srcDir "src/generated/resources" }

repositories {
    maven { url = "https://maven.aliyun.com/repository/public" }
    mavenCentral()
    maven { url = "https://maven.minecraftforge.net/" }
    maven { url = "https://maven.parchmentmc.org" }
    maven { url = "https://maven.shedaniel.me/" }
    maven {
        name = "FTB Maven"
        url = "https://maven.ftb.dev/releases"
    }
}

dependencies {
    minecraft "net.minecraftforge:forge:1.20.1-47.4.10"
    // v1.5 移除 Cloth Config 依赖：配置改自写 MWConfigManager（Gson）
    // v9.3 技能点加点界面（FTB Library，仅客户端 GUI 使用；2001=1.20.1 版本线，maven 可用的最新为 2001.1.1-build.1）
    implementation fg.deobf("dev.ftb.mods:ftb-library-forge:2001.1.1-build.1")
    // v10.5 枪械附魔（TaCZ API 编译依赖；运行时由 mods 目录提供）
    compileOnly files("libs/tacz-1.20.1-1.1.8-hotfix.jar")
}

tasks.named("processResources", ProcessResources).configure {
    filteringCharset = "UTF-8"
    var replaceProperties = [
            minecraft_version: "1.20.1",
            minecraft_version_range: "[1.20.1,1.21)",
            forge_version: "47.4.10",
            forge_version_range: "[47,)",
            loader_version_range: "[47,)",
            mod_id: "monsterwaves",
            mod_name: "怪物狂潮 Monster Waves",
            mod_license: "MIT",
            mod_version: "1.0.0",
            mod_authors: "MCModDev"
    ]
    inputs.properties replaceProperties
    filesMatching(["META-INF/mods.toml"]) {
        expand replaceProperties
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}

jar {
    manifest {
        attributes([
                "Specification-Title"     : "monsterwaves",
                "Specification-Vendor"    : "MCModDev",
                "Specification-Version"   : "1",
                "Implementation-Title"    : project.name,
                "Implementation-Version"  : project.jar.archiveVersion,
                "Implementation-Vendor"   : "MCModDev",
                "Implementation-Timestamp": new Date().format("yyyy-MM-dd HH:mm:ss")
        ])
    }
}

jar.finalizedBy("reobfJar")

publishing {
    publications {
        mavenJava(MavenPublication) {
            artifact jar
        }
    }
    repositories {
        maven {
            url "file://${project.projectDir}/mcmodsrepo"
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = "UTF-8"
}